# go2_description

./: CMakeLists.txt
gazebo/: gazebo.xacro
launch/: rviz.launch  spawn.launch  upload.launch
robots/: go2.srdf.xacro  go2.urdf.xacro  jump_platform.urdf.xacro
urdfs/: const.xacro  leg.gazebo.xacro  leg.xacro
